--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "cypress": "^15.10.0"
+    "@cypress/xpath": "^2.0.3",
+    "cypress": "^15.10.0",
+    "cypress-xray-plugin": "^8.5.0",
+    "mocha-junit-reporter": "^2.2.1"
   }
 }
