yml file renamed

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           # Robot nainštaluje všetko potrebné
           install-command: npm install --force
-          # Tu mu hovoríme: Spusti presne tento súbor
-         #spec: cypress/e2e/login.cy.js
+            # Tu mu hovoríme: Spusti presne tento súbor
+          spec: cypress/e2e/login.cy.js
           browser: chrome
