--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,18 +1,26 @@
 name: Cypress Tests
-on: [push]
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+      - name: Install Node
+        uses: actions/setup-node@v4
         with:
-          # Robot nainštaluje všetko potrebné
-          install-command: npm install --force
-            # Tu mu hovoríme: Spusti presne tento súbor
-          spec: cypress/e2e/login.cy.js
-          browser: chrome
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run Cypress tests
+        run: npx cypress run
