--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -23,4 +23,4 @@ jobs:
         run: npm install
 
       - name: Run Cypress tests
-        run: npm cypress run -- --spec "cypress/e2e/login.cy.js"
+        run: npm run cypress:run -- --spec "cypress/e2e/login.cy.js"
